# bazel-example

./: .bazelrc  LICENSE  Makefile  go.mod  gocon.txt
cmd/gocon20/: BUILD.bazel  main.go
config/: BUILD.bazel  success.conf
debian_packages/mysqld_exporter/: BUILD.bazel  tar.BUILD.bazel
hack/: BUILD.bazel  check-url.sh  urls.txt
internal/server/: BUILD.bazel  server.go
lib/hello/: BUILD.bazel  hello.go  hello_test.go
operator/: BUILD.bazel  PROJECT  go.mod  main.go
operator/api/v1/: BUILD.bazel  groupversion_info.go  stream_types.go  zz_generated.deepcopy.go
operator/config/crd/: kustomization.yaml
operator/config/crd/patches/: cainjection_in_streams.yaml  webhook_in_streams.yaml
operator/config/rbac/: stream_editor_role.yaml  stream_viewer_role.yaml
operator/config/samples/: example_v1_stream.yaml
operator/controllers/: BUILD.bazel  stream_controller.go  suite_test.go  utils_test.go
sh/: BUILD.bazel  hello.sh  world.sh
test-suite/example-suite/: BUILD.bazel  main.go
test-suite/example-suite/rules/: BUILD.bazel  def.bzl  kicker.tpl
testsharding/: BUILD.bazel  sharding_test.go
tools/helloworld1/: BUILD.bazel  main.go  main_test.go
tools/helloworld2/: BUILD.bazel  main.go  main_test.go
tools/helloworld3/: BUILD.bazel  go.mod  go.sum  main.go
tools/rpc/: go.mod
tools/rpc/greeter_client/: BUILD.bazel  main.go
tools/rpc/greeter_server/: BUILD.bazel  main.go
tools/rpc/helloworld/: BUILD.bazel  helloworld.pb.go
