load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/f110/bazel-example/operator",
    visibility = ["//visibility:private"],
    deps = [
        "//operator/api/v1:go_default_library",
        "//operator/controllers:go_default_library",
        "//operator/vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//operator/vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
        "//operator/vendor/k8s.io/client-go/plugin/pkg/client/auth/gcp:go_default_library",
        "//operator/vendor/sigs.k8s.io/controller-runtime:go_default_library",
        "//operator/vendor/sigs.k8s.io/controller-runtime/pkg/log/zap:go_default_library",
    ],
)

go_binary(
    name = "operator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
