load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/f110/bazel-example/tools/helloworld2",
    visibility = ["//visibility:private"],
    deps = ["//lib/hello:go_default_library"],
)

go_binary(
    name = "helloworld2",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
)
