load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/f110/bazel-example/tools/helloworld3",
    visibility = ["//visibility:private"],
    deps = ["//tools/helloworld3/vendor/github.com/logrusorgru/aurora:go_default_library"],
)

go_binary(
    name = "helloworld3",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
