load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "groupversion_info.go",
        "stream_types.go",
        "zz_generated.deepcopy.go",
    ],
    importpath = "github.com/f110/bazel-example/operator/api/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//operator/vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//operator/vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//operator/vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//operator/vendor/sigs.k8s.io/controller-runtime/pkg/scheme:go_default_library",
    ],
)
