load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/f110/bazel-example/tools/rpc/greeter_server",
    visibility = ["//visibility:private"],
    deps = [
        "//tools/rpc/helloworld:go_default_library",
        "//tools/rpc/vendor/google.golang.org/grpc:go_default_library",
    ],
)

go_binary(
    name = "greeter_server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
