load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["helloworld.pb.go"],
    importpath = "github.com/f110/bazel-example/tools/rpc/helloworld",
    visibility = ["//visibility:public"],
    deps = [
        "//tools/rpc/vendor/github.com/golang/protobuf/proto:go_default_library",
        "//tools/rpc/vendor/google.golang.org/grpc:go_default_library",
        "//tools/rpc/vendor/google.golang.org/grpc/codes:go_default_library",
        "//tools/rpc/vendor/google.golang.org/grpc/status:go_default_library",
    ],
)

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "helloworld_proto",
    srcs = ["helloworld.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "helloworld_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/f110/bazel-example/tools/rpc/helloworld",
    proto = ":helloworld_proto",
    visibility = ["//visibility:private"],
)

load("//build/rules/go:proto.bzl", "proto_gen")

proto_gen(
    name = "gen",
    src = ":helloworld_go_proto",
    visibility = ["//visibility:public"],
)
